# OOP_indie_studio

./: CMakeLists.txt  README.md  main.cpp
asset/: ABC_Spielwuerfel.mtl  MilitaryTruck.mtl
cmake/: FindIrrlicht.cmake  FindSFML.cmake  libsfml-audio.so.2.5  libsfml-system.so.2.5
cmake/SFML/: Audio.hpp  Config.hpp
cmake/SFML/Audio/: ASound.hpp  AlResource.hpp  Export.hpp  InputSoundFile.hpp  Listener.hpp  Music.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundFileFactory.hpp  SoundFileFactory.inl  SoundFileReader.hpp  SoundFileWriter.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
cmake/SFML/System/: Clock.hpp  Err.hpp  Export.hpp  FileInputStream.hpp  InputStream.hpp  Lock.hpp  MemoryInputStream.hpp  Mutex.hpp  NativeActivity.hpp  NonCopyable.hpp  Sleep.hpp  String.hpp  String.inl  Thread.hpp  Thread.inl  ThreadLocal.hpp  ThreadLocalPtr.hpp  ThreadLocalPtr.inl  Time.hpp  Utf.hpp  Utf.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl
cmake/include/irrlicht/: CDynamicMeshBuffer.h  CIndexBuffer.h  CMeshBuffer.h  CVertexBuffer.h  EAttributes.h  ECullingTypes.h  EDebugSceneTypes.h  EDeviceTypes.h  EDriverFeatures.h  EDriverTypes.h  EGUIAlignment.h  EGUIElementTypes.h  EHardwareBufferFlags.h  EMaterialFlags.h  EMaterialTypes.h  EMeshWriterEnums.h  EMessageBoxFlags.h  EPrimitiveTypes.h  ESceneNodeAnimatorTypes.h  ESceneNodeTypes.h  EShaderTypes.h  ETerrainElements.h  IAnimatedMesh.h  IAnimatedMeshMD2.h  IAnimatedMeshMD3.h  IAnimatedMeshSceneNode.h  IAttributeExchangingObject.h  IAttributes.h  IBillboardSceneNode.h  IBillboardTextSceneNode.h  IBoneSceneNode.h  ICameraSceneNode.h  IColladaMeshWriter.h  ICursorControl.h  IDummyTransformationSceneNode.h  IDynamicMeshBuffer.h  IEventReceiver.h  IFileArchive.h  IFileList.h  IFileSystem.h  (+139 more)
include/clock/: Clock.hpp
include/engine/: ASound.hpp  Irrlicht.hpp  Music.hpp  Sound.hpp  Tracks.hpp  UserInput.hpp
include/entity/: AEntity.hpp  IEntity.hpp
include/entity/block/: Block.hpp
include/entity/block/powerUpBlock/: PowerUpBlock.hpp
include/entity/bomb/: Bomb.hpp
include/entity/player/: Player.hpp
include/map/: Map.hpp  ProceduralMap.hpp
include/scenemanager/: SceneManager.hpp
include/scenes/: AMenu.hpp  AScene.hpp  Background.hpp  End.hpp  Game.hpp  IScene.hpp  Ladder.hpp  Login.hpp  MapPreview.hpp  Menu.hpp  Options.hpp  PlayerSelection.hpp
include/utils/: Enum.hpp  File.hpp  IrrlichtDeleter.hpp  IrrlichtException.hpp  MapException.hpp  Save.hpp
src/clock/: Clock.cpp
src/engine/: Irrlicht.cpp  Music.cpp  Sound.cpp  Tracks.cpp
src/entity/block/: Block.cpp
src/entity/block/PowerUpBlock/: PowerUpBlock.cpp
src/entity/bomb/: Bomb.cpp
src/entity/player/: Player.cpp
src/map/: Map.cpp  ProceduralMap.cpp
src/scenes/: Background.cpp  End.cpp  Game.cpp  Ladder.cpp  Login.cpp  MapPreview.cpp  Menu.cpp  Options.cpp  PlayerSelection.cpp  SceneManager.cpp
src/utils/: Save.cpp
